--- a/styles/main.scss
+++ b/styles/main.scss
@@ -24,3 +24,4 @@
 @import './particles/parent-card';
 @import './particles/social-link';
 @import './particles/detail-card-desc-section';
+@import './particles/comparison-main-section';
