--- a/styles/particles/_drop-down.scss
+++ b/styles/particles/_drop-down.scss
@@ -7,11 +7,11 @@
   display: flex;
   align-items: center;
   border: 2px solid transparent;
-  z-index:0;
-  transition: z-index .3s .3s;
+  z-index: 0;
+  transition: z-index 0.3s 0.3s;
 
   &_border {
-    border: 2px solid #CBCBCB;
+    border: 2px solid #cbcbcb;
   }
 
   .scrollbar-track-y {
@@ -25,7 +25,7 @@
   }
 
   &_active {
-    transition: z-index .0s .0s;
+    transition: z-index 0s 0s;
     z-index: 1;
     border: 2px solid $mainColor;
 
@@ -38,17 +38,17 @@
         transform: rotate(180deg);
       }
     }
-
   }
 
   &__arrow {
+    pointer-events: none;
     position: absolute;
     right: 1.375vw;
     cursor: pointer;
   }
 
   &__input {
-    border: 2px solid #CBCBCB;
+    border: 2px solid #cbcbcb;
     padding: 0 2.9375vw;
     width: 100%;
     height: 100%;
@@ -73,7 +73,7 @@
     top: 50%;
     transform: translateY(-50%);
 
-    svg{
+    svg {
       width: 100%;
       height: 100%;
     }
@@ -89,14 +89,14 @@
     box-shadow: 0px 8px 60px rgba(36, 28, 41, 0.15);
     border-radius: 0.625vw;
     visibility: hidden;
-    transition: max-height .3s, visibility .3s;
+    transition: max-height 0.3s, visibility 0.3s;
   }
 
   &__item {
     display: flex;
     align-items: center;
     padding: 0.625vw 1.25vw;
-    svg{
+    svg {
       height: 20px;
     }
 
@@ -105,7 +105,8 @@
       cursor: pointer;
       color: $white;
 
-      path, circle {
+      path,
+      circle {
         stroke: $white;
       }
     }
@@ -120,11 +121,11 @@
     height: 1.25vw;
   }
 }
-@media screen and (max-width:1600px) {
+@media screen and (max-width: 1600px) {
   .drop-down {
     border-radius: 10px;
     height: 50px;
-  
+
     .scrollbar-track-y {
       right: 6px;
       height: calc(100% - 20px);
@@ -132,47 +133,46 @@
       bottom: 10px;
       border-radius: 4px;
     }
-  
-    &_active {  
+
+    &_active {
       .drop-down {
         &__list-wrapper {
           max-height: 200px;
         }
       }
-  
     }
-  
+
     &__arrow {
       right: 22px;
     }
-  
+
     &__input {
       padding: 0 47px;
       border-radius: 10px;
-  
+
       &::placeholder {
         color: $black;
       }
     }
-  
+
     &__placeholder-img {
       width: 20px;
       height: 20px;
       left: 18px;
     }
-  
+
     &__list-wrapper {
       border-radius: 10px;
     }
-  
+
     &__item {
       padding: 10px 20px;
     }
-  
+
     &__item-text {
       margin-left: 9px;
     }
-  
+
     &__item-img-wrapper {
       width: 20px;
       height: 20px;
