--- a/styles/particles/_filters.scss
+++ b/styles/particles/_filters.scss
@@ -8,7 +8,11 @@
       margin-top: 20px;
     }
   }
-  &__button-drop{
+  &__price-checkbox {
+    margin-bottom: 10px;
+  }
+
+  &__button-drop {
     width: 100%;
     height: 50px;
     cursor: pointer;
@@ -36,30 +40,30 @@
 
   &__button {
     margin-top: 30px;
-    &_mobile{
+    &_mobile {
       display: none;
     }
   }
 }
 
-@media screen and (max-width:1700px) {
-  .filters {  
+@media screen and (max-width: 1700px) {
+  .filters {
     &__checkbox-wrapper {
       margin-bottom: 2px;
     }
-  
+
     &__show-all {
       margin-top: 20px;
     }
   }
 }
-@media screen and (max-width:1000px) {
-  .filters { 
+@media screen and (max-width: 1000px) {
+  .filters {
     &__button {
-      &_mobile{
+      &_mobile {
         display: flex;
       }
-      &_desk{
+      &_desk {
         display: none;
       }
     }
