--- a/styles/particles/_range-input.scss
+++ b/styles/particles/_range-input.scss
@@ -7,9 +7,25 @@
     align-items: center;
   }
 
+  &_disabled {
+    opacity: 0.2;
+    .range-input {
+      &__circle {
+        cursor: auto;
+        &:hover {
+          border: 3px solid $mainColor;
+          background-color: #fff;
+        }
+        &:active {
+          border: 3px solid $mainColor;
+          background-color: #fff;
+        }
+      }
+    }
+  }
   &__input-wrapper {
     position: relative;
-    border: 2px solid #CBCBCB;
+    border: 2px solid #cbcbcb;
     box-sizing: border-box;
     border-radius: 0.625vw;
     overflow: hidden;
@@ -98,39 +114,39 @@
     }
   }
 }
-@media screen and (max-width:1600px) {
+@media screen and (max-width: 1600px) {
   .range-input {
     padding-bottom: 10px;
-  
+
     &__input-wrapper {
       border-radius: 10px;
     }
-  
+
     &__desc {
       left: 20px;
     }
-  
+
     &__input {
       padding: 9px;
       padding-left: 44px;
     }
-  
+
     &__separator {
       width: 8px;
       height: 2px;
       margin: 0 10px;
     }
-  
+
     &__line {
       height: 3px;
       margin-top: 32px;
       border-radius: 2px;
     }
-  
+
     &__line-path {
       width: calc(100% - 40px);
     }
-  
+
     &__circle {
       height: 20px;
       width: 20px;
