--- a/styles/particles/_detail-card-main-section.scss
+++ b/styles/particles/_detail-card-main-section.scss
@@ -96,16 +96,23 @@
     justify-content: space-between;
     display: flex;
   }
-  &__cost {
-    margin-top: 24px;
+  &__name {
     margin-bottom: 24px;
   }
-  &__farm {
-    margin-top: 12px;
+  &__cost {
+    margin-bottom: 24px;
+  }
+  &__fio {
     margin-bottom: 12px;
   }
+  &__farm {
+    margin-bottom: 12px;
+  }
+  &__adress {
+    margin-bottom: 12px;
+  }
+
   &__desc {
-    margin-top: 12px;
     margin-bottom: 26px;
   }
   &__table {
@@ -182,14 +189,6 @@
     &__slider {
       width: calc(66% - 30px);
       margin-right: 30px;
-    }
-    &__cost {
-      margin-top: 24px;
-      margin-bottom: 24px;
-    }
-    &__farm {
-      margin-top: 12px;
-      margin-bottom: 12px;
     }
     &__table {
       margin-top: 30px;
