--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,27 +1,31 @@
-@import './common';
-@import './particles/header';
-@import './particles/first-section';
-@import './particles/drop-down';
-@import './particles/about-section';
-@import './particles/new-items-section';
-@import './particles/card';
-@import './particles/dog-name';
-@import './particles/icons';
-@import './particles/footer';
-@import './particles/title-block';
-@import './particles/bread-crumbs';
-@import './particles/search-main-section';
-@import './particles/filters';
-@import './particles/range-input';
-@import './particles/checkbox';
-@import './particles/pagination';
-@import './particles/back-button';
-@import './particles/favorites-main-section';
-@import './particles/clear-list';
-@import './particles/detail-card-main-section';
-@import './particles/detail-slider';
-@import './particles/location';
-@import './particles/parent-card';
-@import './particles/social-link';
-@import './particles/detail-card-desc-section';
-@import './particles/comparison-main-section';
+@import "./common";
+@import "./particles/header";
+@import "./particles/first-section";
+@import "./particles/drop-down";
+@import "./particles/about-section";
+@import "./particles/new-items-section";
+@import "./particles/card";
+@import "./particles/dog-name";
+@import "./particles/icons";
+@import "./particles/footer";
+@import "./particles/title-block";
+@import "./particles/bread-crumbs";
+@import "./particles/search-main-section";
+@import "./particles/filters";
+@import "./particles/range-input";
+@import "./particles/checkbox";
+@import "./particles/pagination";
+@import "./particles/back-button";
+@import "./particles/favorites-main-section";
+@import "./particles/clear-list";
+@import "./particles/detail-card-main-section";
+@import "./particles/detail-slider";
+@import "./particles/location";
+@import "./particles/parent-card";
+@import "./particles/social-link";
+@import "./particles/detail-card-desc-section";
+@import "./particles/comparison-main-section";
+@import "./particles/medical-card-first-section";
+@import "./particles/medical-card-second-section";
+@import "./particles/medical-card-img-section";
+@import "./particles/medical-card";
