--- a/styles/particles/_drop-down.scss
+++ b/styles/particles/_drop-down.scss
@@ -35,6 +35,7 @@
         visibility: visible;
       }
       &__arrow {
+        pointer-events: all;
         transform: rotate(180deg);
       }
     }
