--- a/styles/particles/_first-section.scss
+++ b/styles/particles/_first-section.scss
@@ -6,7 +6,7 @@
   justify-content: space-between;
   position: relative;
   overflow: hidden;
-  background: #EFEFEF;
+  background: #efefef;
   min-height: 750px;
 
   &__bg {
@@ -16,12 +16,12 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('../../media/bg-first.svg');
+    background-image: url("../../media/bg-first.svg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
   }
-  &__sub-title{
+  &__sub-title {
     text-align: center;
   }
   &__img-wrapper {
@@ -43,7 +43,7 @@
   }
 
   &__drop-down {
-    &_margin-horizontal{
+    &_margin-horizontal {
       margin: 0 30px;
     }
   }
@@ -67,43 +67,43 @@
   }
 }
 
-@media screen and (max-width:1600px) {
-  .first-section {  
+@media screen and (max-width: 1600px) {
+  .first-section {
     &__img-wrapper {
       width: 1000px;
     }
-  
+
     &__input-row {
       margin-top: 50px;
       width: 1110px;
     }
-  
+
     &__buttons-row {
       margin-top: 30px;
     }
-  
+
     &__drop-down {
-      &_margin-horizontal{
+      &_margin-horizontal {
         margin: 0 30px;
       }
     }
-  
+
     &__inner {
       margin-top: 26vh;
     }
-  
+
     &__title {
       margin-bottom: 30px;
     }
-  
+
     &__main-button {
       margin-right: 30px;
     }
   }
 }
 
-@media screen and (max-width:1280px) {
-  .first-section {  
+@media screen and (max-width: 1280px) {
+  .first-section {
     &__img-wrapper {
       width: calc(100% - 300px);
     }
@@ -120,73 +120,73 @@
     }
 
     &__drop-down {
-      &_margin-horizontal{
+      &_margin-horizontal {
         margin: 0 20px;
       }
     }
   }
 }
-@media screen and (max-width:900px) {
-  .first-section{
-    &__input-row{
+@media screen and (max-width: 900px) {
+  .first-section {
+    &__input-row {
       flex-direction: column;
       margin-top: 30px;
     }
-    &__drop-down{
-      &_margin-horizontal{
+    &__drop-down {
+      &_margin-horizontal {
         margin: 30px 0;
       }
     }
-    &__buttons-row{
+    &__buttons-row {
       flex-direction: column;
       margin-top: 30px;
     }
-    &__main-button{
+    &__main-button {
       margin-right: 0;
       margin-bottom: 20px;
     }
-    &__inner{
+    &__inner {
       padding-left: 14px;
       padding-right: 14px;
       width: 100%;
       margin-top: 130px;
     }
-    &__img-wrapper{
+    &__img-wrapper {
       width: 580px;
     }
-    &__bg{
-      background-image: url('../../media/bg-first-m.svg');
+    &__bg {
+      background-image: none;
     }
-    &__sub-title{
+    &__sub-title {
       line-height: 167%;
     }
   }
 }
-@media screen and (max-width:600px) {
-  .first-section{
-    &__img-wrapper{
+@media screen and (max-width: 600px) {
+  .first-section {
+    &__img-wrapper {
       width: 500px;
     }
   }
 }
 
-@media screen and (max-height:750px) and (max-width:900px){
- .first-section{
+@media screen and (max-height: 750px) and (max-width: 900px) {
+  .first-section {
     min-height: 670px;
 
-    &__inner{
-     margin-top: 76px;
+    &__inner {
+      margin-top: 76px;
     }
-    &__input-row{
+    &__input-row {
       margin-top: 20px;
     }
-    &__drop-down{
-      &_margin-horizontal{
+    &__drop-down {
+      &_margin-horizontal {
         margin: 20px 0;
       }
     }
-    &__buttons-row{
+    &__buttons-row {
       margin-top: 20px;
     }
-  } 
+  }
 }
