--- a/styles/main.scss
+++ b/styles/main.scss
@@ -29,3 +29,4 @@
 @import "./particles/medical-card-second-section";
 @import "./particles/medical-card-img-section";
 @import "./particles/medical-card";
+@import "./particles/search";
