--- a/styles/particles/_medical-card-first-section.scss
+++ b/styles/particles/_medical-card-first-section.scss
@@ -13,6 +13,7 @@
   }
   &__title {
     margin-bottom: 8px;
+    line-height: 150%;
   }
   &__desc {
     margin-bottom: 30px;
@@ -59,5 +60,27 @@
   }
   &__ul {
     margin-bottom: 20px;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .medical-card-first-section {
+    flex-direction: column-reverse;
+    align-items: center;
+    margin-top: 20px;
+    &__img {
+      margin-right: 0;
+    }
+    &__main {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    &__list-item {
+      flex-direction: column;
+      margin-bottom: 22px;
+    }
+    &__list-item-img {
+      margin-right: 0;
+      margin-bottom: 12px;
+    }
   }
 }
