--- a/styles/particles/_medical-card-second-section.scss
+++ b/styles/particles/_medical-card-second-section.scss
@@ -23,6 +23,9 @@
     background-repeat: no-repeat;
     position: relative;
   }
+  &__title {
+    line-height: 150%;
+  }
   &__count {
     font-size: 48px;
     font-weight: 500;
@@ -30,5 +33,22 @@
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .medical-card-second-section {
+    margin-top: 50px;
+    &__main {
+      flex-direction: column;
+      align-items: center;
+    }
+    &__column {
+      max-width: 300px;
+      width: 100%;
+      &:not(:last-of-type) {
+        margin-bottom: 22px;
+      }
+    }
   }
 }
