--- a/styles/particles/_medical-card.scss
+++ b/styles/particles/_medical-card.scss
@@ -2,6 +2,14 @@
   &__button-wrapper {
     margin: 0 auto;
     margin-top: 60px;
-    width: 350px;
+    max-width: 350px;
+    width: 100%;
+  }
+}
+@media screen and (max-width: 360px) {
+  .medical-card {
+    &__button-wrapper {
+      padding: 0 15px;
+    }
   }
 }
