blog & fixes & footer

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -30,3 +30,6 @@
 @import "./particles/medical-card-img-section";
 @import "./particles/medical-card";
 @import "./particles/search";
+@import "./particles/tag";
+@import "./particles/blog-main-section";
+@import "./particles/news-card";
