--- a/styles/particles/_comparison-main-section.scss
+++ b/styles/particles/_comparison-main-section.scss
@@ -80,6 +80,7 @@
     min-height: 50px;
     margin-bottom: 10px;
     display: flex;
+    align-items: center;
     font-size: 16px;
     &:nth-child(odd) {
       padding: 9px 21px;
