--- a/styles/particles/_drop-down.scss
+++ b/styles/particles/_drop-down.scss
@@ -56,6 +56,7 @@
     border: none;
     background: $white;
     border-radius: 0.625vw;
+    font-size: 16px;
     position: relative;
 
     &::placeholder {
@@ -97,6 +98,7 @@
     display: flex;
     align-items: center;
     padding: 0.625vw 1.25vw;
+
     svg {
       height: 20px;
     }
