--- a/styles/particles/_news-card.scss
+++ b/styles/particles/_news-card.scss
@@ -2,6 +2,9 @@
   border: 1px solid $gray;
   border-radius: 10px;
   overflow: hidden;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
   &__tag-wrapper {
     position: absolute;
     bottom: 15px;
@@ -12,13 +15,16 @@
     position: relative;
     height: 12.5vw;
     width: 100%;
-    background-image: url("../../media/news-dog.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
   }
   &__main {
     padding: 15px;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
   &__title {
     font-weight: 500;
