--- a/styles/particles/_tag.scss
+++ b/styles/particles/_tag.scss
@@ -1,5 +1,4 @@
 .tag {
-  cursor: pointer;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -7,4 +6,11 @@
   border-radius: 10px;
   padding: 7px 30px;
   white-space: nowrap;
+  opacity: 0.4;
+  &_active {
+    opacity: 1;
+  }
+  &_clickable {
+    cursor: pointer;
+  }
 }
