--- a/styles/main.scss
+++ b/styles/main.scss
@@ -33,3 +33,5 @@
 @import "./particles/tag";
 @import "./particles/blog-main-section";
 @import "./particles/news-card";
+@import "./particles/404";
+@import "./particles/help-modal";
