--- a/styles/particles/_header.scss
+++ b/styles/particles/_header.scss
@@ -259,6 +259,7 @@
 @media screen and (max-width: 600px) {
   .header {
     height: 56px;
+    background-color: $grayBG;
   }
 }
 @media screen and (max-height: 560px) {
