--- a/styles/particles/_detail-card-main-section.scss
+++ b/styles/particles/_detail-card-main-section.scss
@@ -120,11 +120,13 @@
     margin-bottom: -100%;
   }
   &__table-title {
+    display: flex;
     font-weight: 600;
     font-size: 0.875vw;
     line-height: 200%;
   }
   &__table-item {
+    position: relative;
     border-radius: 10px;
     display: flex;
     align-items: center;
