--- a/styles/common/_general.scss
+++ b/styles/common/_general.scss
@@ -16,7 +16,7 @@
     &_nav {
       font-style: normal;
       font-weight: 500;
-      font-size: 1.125vw;
+      font-size: 16px;
     }
 
     &_main-title {
