--- a/styles/particles/_detail-slider.scss
+++ b/styles/particles/_detail-slider.scss
@@ -3,12 +3,12 @@
     width: 100%;
     height: 33.125vw;
   }
-  &__arrow{
+  &__arrow {
     position: absolute;
     top: 50%;
     width: 4.0625vw;
     height: 4.0625vw;
-    border-radius:50%;
+    border-radius: 50%;
     background: rgba(255, 255, 255, 1);
     box-shadow: 0px 8px 60px rgba(36, 28, 41, 0.15);
     display: flex;
@@ -17,30 +17,30 @@
     align-items: center;
     transform: translateY(-50%);
     cursor: pointer;
-    transition: background .3s, opacity .3s;
+    transition: background 0.3s, opacity 0.3s;
 
-    &:hover{
+    &:hover {
       background: $white;
     }
-    &:active{
-      path{
-        stroke: #7A2F03;
+    &:active {
+      path {
+        stroke: #7a2f03;
       }
     }
 
-    &_left{
+    &_left {
       left: 0.625vw;
-      svg{
+      svg {
         margin-left: -4px;
       }
     }
-    &_right{
+    &_right {
       right: 0.625vw;
-      svg{
+      svg {
         margin-right: -4px;
       }
     }
-    &.detail-slider__arrow_disabled{
+    &.detail-slider__arrow_disabled {
       background: rgba(255, 255, 255, 1);
       box-shadow: 0px 8px 60px rgba(36, 28, 41, 0.15);
       cursor: auto;
@@ -50,11 +50,11 @@
       }
     }
   }
-  &__main-wrapper{
+  &__main-wrapper {
     position: relative;
     margin-bottom: 30px;
-    &:hover{
-      .detail-slider__arrow{
+    &:hover {
+      .detail-slider__arrow {
         opacity: 1;
       }
     }
@@ -76,46 +76,74 @@
     background-position: center;
     background-size: cover;
     border-radius: 0.625vw;
-    transition: opacity .3s;
-    
-    &:not(.is-selected){
-      opacity: .6;
+    transition: opacity 0.3s;
+    overflow: hidden;
+
+    &:not(.is-selected) {
+      opacity: 0.6;
     }
 
-    &:hover{
+    &:hover {
       opacity: 1;
+    }
+    &_video {
+      opacity: 1;
+      position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+  &__video-overlay {
+    background-position: center;
+    background-size: cover;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+  }
+  &__play-button {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: $white;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    svg {
+      margin-left: 4px;
     }
   }
   &__nav {
     width: 100%;
   }
-  .flickity-page-dots{
+  .flickity-page-dots {
     display: none;
   }
 }
-@media screen and (max-width:1600px) {
+@media screen and (max-width: 1600px) {
   .detail-slider {
     &__main {
       height: 500px;
     }
-    &__arrow{
+    &__arrow {
       width: 65px;
       height: 65px;
-  
-      &_left{
+
+      &_left {
         left: 10px;
-        svg{
+        svg {
           margin-left: -4px;
         }
       }
-      &_right{
+      &_right {
         right: 10px;
-        svg{
+        svg {
           margin-right: -4px;
         }
       }
     }
-    &__main-wrapper{
+    &__main-wrapper {
       margin-bottom: 30px;
     }
     &__main-item {
@@ -123,7 +151,7 @@
       border-radius: 10px;
       margin-right: 30px;
     }
-  
+
     &__nav-item {
       width: 122px;
       height: 110px;
@@ -132,36 +160,36 @@
     }
   }
 }
-@media screen and (max-width:600px) {
+@media screen and (max-width: 600px) {
   .detail-slider {
-    &__nav{
+    &__nav {
       display: none;
     }
-    &__arrow{
+    &__arrow {
       display: none;
     }
-    &__main{
+    &__main {
       height: 360px;
     }
-    &__main-item{
+    &__main-item {
       height: 360px;
     }
-    &__main-wrapper{
+    &__main-wrapper {
       margin-bottom: 0;
     }
-    .flickity-page-dots{
+    .flickity-page-dots {
       display: block;
       bottom: 20px;
       width: auto;
       left: 50%;
       transform: translateX(-50%);
     }
-    .dot{
+    .dot {
       height: 7px;
       width: 7px;
       background-color: $white;
       opacity: 1;
-      &.is-selected{
+      &.is-selected {
         background-color: $mainColor;
       }
     }
