--- a/styles/particles/_medical-card.scss
+++ b/styles/particles/_medical-card.scss
@@ -2,14 +2,24 @@
   &__button-wrapper {
     margin: 0 auto;
     margin-top: 60px;
-    max-width: 350px;
+    max-width: 20%;
     width: 100%;
+  }
+}
+@media screen and (max-width: 1600px) {
+  .medical-card {
+    &__button-wrapper {
+      margin: 0 auto;
+      margin-top: 60px;
+      max-width: 350px;
+      width: 100%;
+    }
   }
 }
 @media screen and (max-width: 360px) {
   .medical-card {
     &__button-wrapper {
-      padding: 0 15px;
+      padding: 0 12px;
     }
   }
 }
