--- a/styles/particles/_header.scss
+++ b/styles/particles/_header.scss
@@ -77,17 +77,22 @@
     cursor: pointer;
   }
   &__modal {
+    white-space: nowrap;
     position: absolute;
     background-color: $white;
     top: calc(100% + 15px);
     display: flex;
     padding: 15px;
+    padding-right: 60px;
     border-radius: 10px;
-    width: 380px;
+    min-width: 380px;
     right: 0;
     opacity: 0;
     visibility: hidden;
+    box-shadow: 0px 8px 60px rgba(36, 28, 41, 0.15);
     transition: visibility 0.3s, opacity 0.3s;
+    line-height: 150%;
+
     &_active {
       opacity: 1;
       visibility: visible;
@@ -100,6 +105,8 @@
     }
   }
   &__modal-icon {
+    min-height: 1em;
+    min-width: 1em;
     margin-right: 8px;
   }
   &__modal-arrow {
@@ -213,6 +220,7 @@
       transform: translateX(-50%);
       opacity: 0;
       visibility: hidden;
+      box-shadow: 0px 8px 60px rgba(36, 28, 41, 0.15);
       transition: visibility 0.3s, opacity 0.3s;
       &_active {
         opacity: 1;
