--- a/styles/particles/_search-main-section.scss
+++ b/styles/particles/_search-main-section.scss
@@ -134,7 +134,9 @@
       transform: translateX(-50%);
       z-index: 1;
       border-radius: 10px;
-      padding: 12px 70px;
+      padding: 12px;
+      width: 245px;
+      height: 50px;
       background-color: #fff;
       box-shadow: 0px 8px 30px rgba(36, 28, 41, 0.15);
     }
