--- a/styles/main.scss
+++ b/styles/main.scss
@@ -35,3 +35,9 @@
 @import "./particles/news-card";
 @import "./particles/404";
 @import "./particles/help-modal";
+@import "./particles/about-first-section";
+@import "./particles/about-second-section";
+@import "./particles/about-breeders-section";
+@import "./particles/about-buyers-section";
+@import "./particles/medstory-section";
+@import "./particles/blog-section";
