--- a/styles/main.scss
+++ b/styles/main.scss
@@ -41,3 +41,5 @@
 @import "./particles/about-buyers-section";
 @import "./particles/medstory-section";
 @import "./particles/blog-section";
+@import "./particles/personal-area";
+@import "./particles/consent-processing";
