--- a/styles/particles/_checkbox.scss
+++ b/styles/particles/_checkbox.scss
@@ -3,7 +3,7 @@
   align-items: center;
   cursor: pointer;
 
-  &__main:checked+&__box {
+  &__main:checked + &__box {
     background-color: $mainColor;
     border: 2px solid $mainColor;
 
@@ -21,6 +21,7 @@
     align-items: center;
     justify-content: center;
     width: 20px;
+    min-width: 20px;
     height: 20px;
     border: 2px solid $gray;
     border-radius: 2px;
