--- a/styles/particles/_footer.scss
+++ b/styles/particles/_footer.scss
@@ -10,6 +10,9 @@
     justify-content: center;
     width: 100%;
   }
+  &__personal-area {
+    margin-top: 20px;
+  }
   &__link-row {
     display: flex;
     align-items: center;
@@ -85,6 +88,9 @@
     &__link {
       margin-right: 0;
       margin-bottom: 20px;
+    }
+    &__personal-area {
+      margin-top: 0;
     }
     &__link-row {
       display: flex;
