--- a/styles/particles/_new-items-section.scss
+++ b/styles/particles/_new-items-section.scss
@@ -28,6 +28,8 @@
   &__list {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
   }
 
   &__button-wrapper {
