--- a/styles/particles/_personal-area.scss
+++ b/styles/particles/_personal-area.scss
@@ -16,6 +16,10 @@
   &__input {
     padding-left: 16px;
     padding-right: 16px;
+
+    &::placeholder {
+      color: #888;
+    }
   }
 
   &__main {
