--- a/styles/particles/_favorites-main-section.scss
+++ b/styles/particles/_favorites-main-section.scss
@@ -6,6 +6,11 @@
     margin-top: 16px;
   }
 
+  &__message {
+    margin: 42px auto;
+    text-align: center;
+  }
+
   &__row {
     display: flex;
     justify-content: space-between;
@@ -37,18 +42,19 @@
     margin-top: 90px;
   }
 }
-@media screen and (max-width:1700px) {
-  .favorites-main-section {  
+
+@media screen and (max-width: 1700px) {
+  .favorites-main-section {
     &__title {
       margin-top: 16px;
     }
-  
+
     &__row {
       width: 100%;
       margin-top: 12px;
       margin-bottom: 32px;
     }
-  
+
     &__item-wrapper {
       width: calc(33% - 20px);
       margin-right: 30px;
@@ -57,54 +63,60 @@
       &:nth-child(4n) {
         margin-right: 30px;
       }
-  
+
       &:nth-child(3n) {
         margin-right: 0;
       }
     }
-  
+
     &__pagination {
       margin-top: 90px;
     }
   }
 }
-@media screen and (max-width:1000px) {
+
+@media screen and (max-width: 1000px) {
   .favorites-main-section {
     margin-top: 30px;
 
-    &__pagination{
+    &__pagination {
       margin-top: 50px;
     }
 
     &__item-wrapper {
       width: calc(50% - 15px);
+
       &:nth-child(4n) {
         margin-right: 30px;
       }
-  
+
       &:nth-child(3n) {
         margin-right: 30px;
       }
+
       &:nth-child(2n) {
         margin-right: 0px;
       }
     }
   }
 }
-@media screen and (max-width:600px) {
+
+@media screen and (max-width: 600px) {
   .favorites-main-section {
     &__item-wrapper {
       width: 100%;
       margin-right: 0;
+
       &:nth-child(4n) {
         margin-right: 0px;
       }
-  
+
       &:nth-child(3n) {
         margin-right: 0px;
       }
     }
-    &__pagination{
+
+    &__pagination {
       margin-top: 20px;
     }
   }
